--- a/dubbo-customer/src/main/resource/application.yml
+++ b/dubbo-customer/src/main/resource/application.yml
@@ -10,3 +10,5 @@ dubbo:
     address: zookeeper://127.0.0.1:2181
   metadata-report:
     address: zookeeper://127.0.0.1:2181
+  config-center:
+    address: zookeeper://127.0.0.1:2181
